--- a/Operations.AWS/Operations.AWS.csproj
+++ b/Operations.AWS/Operations.AWS.csproj
@@ -30,11 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AWSSDK.Core">
-      <HintPath>E:\AWS\Target Take Control AWS\AWSSDK.Core.dll</HintPath>
+    <Reference Include="AWSSDK.Core, Version=3.1.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\AWSSDK\AWSSDK.Core.dll</HintPath>
     </Reference>
-    <Reference Include="AWSSDK.EC2">
-      <HintPath>E:\AWS\Target Take Control AWS\AWSSDK.EC2.dll</HintPath>
+    <Reference Include="AWSSDK.EC2, Version=3.1.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\AWSSDK\AWSSDK.EC2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,14 +48,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AmazonEc2ClientValidator.cs" />
+    <Compile Include="AmazonEc2ClientProvider.cs" />
     <Compile Include="ImageOperations.cs" />
     <Compile Include="InstanceOperations.cs" />
+    <Compile Include="KeypairOperations.cs" />
     <Compile Include="NicOperations.cs" />
+    <Compile Include="RegionsOperations.cs" />
+    <Compile Include="SecurityGroupOperations.cs" />
     <Compile Include="SnapshotOperations.cs" />
+    <Compile Include="SubnetOperations.cs" />
     <Compile Include="VolumeOperations.cs" />
     <Compile Include="Operations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VpcOperations.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
